--- a/scss/component/_buttons-alerts.scss
+++ b/scss/component/_buttons-alerts.scss
@@ -70,6 +70,19 @@
 // - - - - - Buttons - - - - - //
 //                             //
 
+.traffic-nav-link {
+	text-align: center;
+	width: 20%;
+	padding: 5px;
+
+	&:active {
+		background-color: #21b6a8;
+		border-radius: 50px;
+		color: white;
+		box-shadow: 0px 3px 3px rgba(33, 182, 168, 0.2);
+	}
+}
+
 .button-message {
 	display: block;
 	width: 90%;
