--- a/scss/component/_buttons-alerts.scss
+++ b/scss/component/_buttons-alerts.scss
@@ -26,46 +26,41 @@
 // - - - - - Notifications - - - - - //
 //                                   //
 
-.notifications-container {
-	z-index: 2;
-	margin: 0;
-
-	.notification-messages {
-		padding: 0;
-		margin: 0;
-		list-style-type: none;
-
-		#messages {
-			text-align: right;
-			#notification {
-				display: inline-block;
-			}
-
-			#notificationList {
-				display: none;
-				width: 100%;
-				list-style-type: none;
-				padding: 0;
-			}
-
-			&:hover {
-				#notificationList {
-					background-color: dodgerblue;
-					@include grid-layout(auto, 200px);
-					margin: 0;
-
-					li {
-						width: 100%;
-						p {
-							display: block;
-						}
-					}
-				}
-			}
-		}
-	}
+.modal {
+	background-color: $dark-accent-color;
+	position: absolute;
+	left: 20%;
+	width: 250px;
+	border-radius: 10px;
+	z-index: 10;
 }
 
+.modalContainer {
+	display: flex;
+	flex-direction: column;
+}
+
+.modalContent {
+	padding: 10px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	border-bottom: 1px solid $light-accent-color;
+}
+
+.closeModal {
+	width: 30px;
+	height: 30px;
+	background: none;
+	border: none;
+	outline: none;
+	font-size: 1.5rem;
+	font-weight: bold;
+}
+
+.closed {
+	display: none;
+}
 //                             //
 // - - - - - Buttons - - - - - //
 //                             //
