--- a/scss/component/_buttons-alerts.scss
+++ b/scss/component/_buttons-alerts.scss
@@ -40,12 +40,16 @@
 	flex-direction: column;
 }
 
-.modalContent {
+.modalBody {
 	padding: 10px;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
 	border-bottom: 1px solid $light-accent-color;
+
+	p {
+		margin: 0;
+	}
 }
 
 .closeModal {
