--- a/scss/component/_buttons-alerts.scss
+++ b/scss/component/_buttons-alerts.scss
@@ -65,6 +65,15 @@
 .closed {
 	display: none;
 }
+
+.clear {
+	fill: white;
+}
+
+.alert {
+	fill: #fd1706;
+}
+
 //                             //
 // - - - - - Buttons - - - - - //
 //                             //
