adjust notification pop-up positioning

--- a/scss/component/_buttons-alerts.scss
+++ b/scss/component/_buttons-alerts.scss
@@ -34,9 +34,8 @@
 .modal {
 	background-color: $dark-accent-color;
 	position: fixed;
-	top: 12%;
-	left: 50%;
-
+	top: 65px;
+	left: 12%;
 	width: 250px;
 	border-radius: 10px;
 	z-index: 10;
