--- a/css/styles.css
+++ b/css/styles.css
@@ -443,8 +443,8 @@ h1 span {
 .modal {
   background-color: #478c5c;
   position: fixed;
-  top: 12%;
-  left: 50%;
+  top: 65px;
+  left: 12%;
   width: 250px;
   border-radius: 10px;
   z-index: 10;
