--- a/scss/component/_media-queries.scss
+++ b/scss/component/_media-queries.scss
@@ -20,6 +20,10 @@
 		}
 	}
 
+	#alert-circle {
+		right: 203px;
+	}
+
 	#notification {
 		right: 195px;
 	}
@@ -53,6 +57,10 @@
 		.modal {
 			left: 48%;
 		}
+	}
+
+	#alert-circle {
+		right: 156px;
 	}
 
 	.nav-container {
@@ -227,6 +235,10 @@
 
 		.modal {
 			left: 60%;
+		}
+
+		#alert-circle {
+			right: 162px;
 		}
 	}
 
