--- a/scss/component/_buttons-alerts.scss
+++ b/scss/component/_buttons-alerts.scss
@@ -29,6 +29,8 @@
 
 #notification:hover {
 	cursor: pointer;
+	transition: all .2s ease-in;
+	transform: scale(1.1);
 }
 
 .modal {
@@ -49,11 +51,12 @@
 .modalBody {
 	padding: 10px;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
 	border-bottom: 1px solid $light-accent-color;
 
 	p {
+		text-align: left;
 		margin: 0;
 	}
 }
@@ -76,12 +79,20 @@
 	display: none;
 }
 
-.alert {
-	fill: #fd1706;
-}
-
 .clear {
 	fill: white;
+}
+
+#alert-circle {
+	position: absolute;
+	top: 15px;
+	right: 88px;
+	background-color: $alert;
+	width: 10px;
+	height: 10px;
+	margin: 0;
+	border-radius: 50%;
+	animation: pulse 1s infinite;
 }
 
 //                             //
